[project]
name = "streamlit-llm-app"
version = "0.1.0"
description = "streamlitの練習用"
authors = [
    {name = "hoge"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <4.0" # <4.0 がないと langchain インストールのときにエラーになる
dependencies = [
    "streamlit (==1.41.1)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (==0.3.0)",
    "openai (==1.47.0)",
    "langchain-community (==0.3.0)",
    "langchain-openai (==0.2.2)",
    "httpx (==0.27.2)",
    "pydantic (==2.9.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
